--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Disciplina</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;600&family=Roboto:wght@300;400;700&family=Teko:wght@300;400&display=swap"
-        rel="stylesheet">
-    
+
+
+
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
 
@@ -25,33 +23,33 @@
 <body>
 
     <header>
-        <nav>
-            <a class="LogoNav" href="#inicio">LOGO</a>
-            <img src="assets/img/align-justified.svg" class="responsiveImgNav" alt="" id="inicio">
-            <ul class="nav-list">
-                <li><a href="#inicio">INICIO</a></li>
-                <li><a href="#projeto">PROJETOS</a></li>
-                <li><a href="#sobre">SOBRE</a></li>
-                <li><a href="#contatos">CONTATOS</a></li>
-                </div>
+        <div class="NavFixed">
+            <nav>
+                <a class="LogoNav" href="#inicio">LOGO</a>
+                <img src="assets/img/align-justified.svg" class="responsiveImgNav" alt="" id="inicio">
+                <ul class="nav-list">
+                    <li><a href="#inicio">INICIO</a></li>
+                    <li><a href="#projeto">PROJETOS</a></li>
+                    <li><a href="#sobre">SOBRE</a></li>
+                    <li><a href="#contatos">CONTATOS</a></li>
+        </div>
         </nav>
+        </div>
         <main class="MainHeader">
             <div class="esquerdaHeader">
                 <img src="assets/img/coding-workshop-animate.svg" class="imagemEsquerda" alt="ImagemEsquerda">
             </div>
-            <div class="direitaHeader">
-                <h1>Vitor Quadros</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
-                <div class="direitaHeaderImagem">
-                    <img src="assets/Icons/github.png">
-                    <img src="assets/Icons/github.png">
-                    <img src="assets/Icons/github.png">
-                    <i class="bi bi-bicycle"></i>
-                    
 
+            <div class="direitaHeader">
+                <div class="TextDireitaHeader">
+                    <h1>Vitor Quadros</h1>
+                    <p>Software Engineering - Suport Analyst - Quality Assurance </p>
+                    </div>
+                    <div class="direitaHeaderImagem">
+                        <i class="bi bi-linkedin"></i>
+                        <i class="bi bi-github"></i>
+                        <i class="bi bi-filetype-pdf"></i>
+                    </div>
                 </div>
             </div>
         </main>
@@ -93,6 +91,62 @@
                 </div>
             </div>
         </div>
+
+        <!--Imagem Lado Esquerdo / Conteudo Lado Direito-->
+        <div class="mainProjects">
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
+                    <img src="assets/img/LojaNike.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
+                    <h1>LojaNike</h1>
+                    <div>
+                        <img src="assets/Icons/html-5.png" alt="">
+                        <img src="assets/Icons/css-3.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <!--Contudo lado Esquerdo / Imagem lado direito-->
+        <div class="mainProjects">
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
+                    <h1>Pygame</h1>
+                    <div>
+                        <img src="assets/Icons/html-5.png" alt="">
+                        <img src="assets/Icons/css-3.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
+                </div>
+            </div>
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
+                    <img src="assets/img/pygame.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
         <!--Imagem Lado Esquerdo / Conteudo Lado Direito-->
         <div class="mainProjects">
             <div class="LadoDireitoProjects">
