--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <div class="TextDireitaHeader">
                     <h1>Vitor Quadros</h1>
                     <p>Software Engineering - Suport Analyst - Quality Assurance </p>
-                    </div>
-                    <div class="direitaHeaderImagem">
-                        <i class="bi bi-linkedin"></i>
-                        <i class="bi bi-github"></i>
-                        <i class="bi bi-filetype-pdf"></i>
-                    </div>
                 </div>
+                <div class="direitaHeaderImagem">
+                    <i class="bi bi-linkedin"></i>
+                    <i class="bi bi-github"></i>
+                    <i class="bi bi-filetype-pdf"></i>
+                </div>
+            </div>
             </div>
         </main>
     </header>
@@ -70,19 +70,23 @@
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
                     <h1>Pygame</h1>
-                    <div>
-                        <img src="assets/Icons/html-5.png" alt="">
-                        <img src="assets/Icons/css-3.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
+                    <div class="DefineTamanhoBootStrapProjects">
+                        <i class="bi bi-filetype-py"></i>
+                        <i class="bi bi-github"></i>
                     </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
+                    <div class="SpanTeste">
+                        <span>
+                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                            showcase
+                            my web presence, story, work experience, education, projects, and achievements in an
+                            interactive
+                            and
+                            visually-appealing format.
+                        </span>
+                    </div>
+                    <button class="DefineTamanhoButtonProjects">
+                        Veja Mais
+                    </button>
                 </div>
             </div>
             <div class="LadoDireitoProjects">
@@ -103,19 +107,23 @@
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
                     <h1>LojaNike</h1>
-                    <div>
-                        <img src="assets/Icons/html-5.png" alt="">
-                        <img src="assets/Icons/css-3.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
+                    <div class="DefineTamanhoBootStrapProjects">
+                        <i class="bi bi-filetype-py"></i>
+                        <i class="bi bi-github"></i>
                     </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
+                    <div class="SpanTeste">
+                        <span>
+                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                            showcase
+                            my web presence, story, work experience, education, projects, and achievements in an
+                            interactive
+                            and
+                            visually-appealing format.
+                        </span>
+                    </div>
+                    <button class="DefineTamanhoButtonProjects">
+                        Veja Mais
+                    </button>
                 </div>
             </div>
         </div>
@@ -125,19 +133,23 @@
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
                     <h1>Pygame</h1>
-                    <div>
-                        <img src="assets/Icons/html-5.png" alt="">
-                        <img src="assets/Icons/css-3.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
+                    <div class="DefineTamanhoBootStrapProjects">
+                        <i class="bi bi-filetype-py"></i>
+                        <i class="bi bi-github"></i>
                     </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
+                    <div class="SpanTeste">
+                        <span>
+                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                            showcase
+                            my web presence, story, work experience, education, projects, and achievements in an
+                            interactive
+                            and
+                            visually-appealing format.
+                        </span>
+                    </div>
+                    <button class="DefineTamanhoButtonProjects">
+                        Veja Mais
+                    </button>
                 </div>
             </div>
             <div class="LadoDireitoProjects">
@@ -158,19 +170,23 @@
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
                     <h1>LojaNike</h1>
-                    <div>
-                        <img src="assets/Icons/html-5.png" alt="">
-                        <img src="assets/Icons/css-3.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
+                    <div class="DefineTamanhoBootStrapProjects">
+                        <i class="bi bi-filetype-py"></i>
+                        <i class="bi bi-github"></i>
                     </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
+                    <div class="SpanTeste">
+                        <span>
+                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                            showcase
+                            my web presence, story, work experience, education, projects, and achievements in an
+                            interactive
+                            and
+                            visually-appealing format.
+                        </span>
+                    </div>
+                    <button class="DefineTamanhoButtonProjects">
+                        Veja Mais
+                    </button>
                 </div>
             </div>
         </div>
@@ -209,11 +225,7 @@
                             inovação. Desde o início da minha formação, fiquei encantado com o vasto mundo da computação
                             e as infinitas possibilidades que ele oferece.</p>
                     </div>
-                    <div class="IconsSobre">
-                        <i class="bi bi-github"></i>
-                        <i class="bi bi-github"></i>
-                        <i class="bi bi-github"></i>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -277,13 +289,13 @@
 
 
     <!--FOOTER-->
+
     <footer>
         <div class="footerMain">
-            <div class="ConteudoFooter">
-                <h1>Vitor Quadros</h1>
-            </div>
+            <h1>®Vitor Quadros</h1>
         </div>
     </footer>
+
     <!--FIM FOOTER-->
 
     <script src="assets/mobile-navbar.js">
