--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 
 <body>
 
-    <header>
+    <header id="inicio">
         <div class="NavFixed">
             <nav>
-                <a class="LogoNav" href="#inicio">LOGO</a>
-                <img src="assets/img/align-justified.svg" class="responsiveImgNav" alt="" id="inicio">
+                <a class="LogoNav" href="#inicio">Vitor</a>
+                <div class="responsiveImgNav">
+                    <i class="bi bi-list"></i>
+                </div>
                 <ul class="nav-list">
                     <li><a href="#inicio">INICIO</a></li>
                     <li><a href="#projeto">PROJETOS</a></li>
                     <li><a href="#sobre">SOBRE</a></li>
-                    <li><a href="#contatos">CONTATOS</a></li>
+                    <!--<li><a href="#contatos">CONTATOS</a></li>-->
         </div>
         </nav>
         </div>
@@ -46,9 +48,9 @@
                     <p>Software Engineering - Suport Analyst - Quality Assurance </p>
                 </div>
                 <div class="direitaHeaderImagem">
-                    <i class="bi bi-linkedin"></i>
-                    <i class="bi bi-github"></i>
-                    <i class="bi bi-filetype-pdf"></i>
+                    <a href="https://www.linkedin.com/in/vitor-quadros-vafq472/"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/ViitorQuadros"><i class="bi bi-github"></i></a>
+                    <a href="assets/auxilio/Curriculo Vitor Quadros.pdf"><i class="bi bi-filetype-pdf"></i></a>
                 </div>
             </div>
             </div>
@@ -76,17 +78,14 @@
                     </div>
                     <div class="SpanTeste">
                         <span>
-                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                            showcase
-                            my web presence, story, work experience, education, projects, and achievements in an
-                            interactive
-                            and
-                            visually-appealing format.
+                            Este projeto foi desenvolvido em Python durante o primeiro semestre do curso de programação.
+                            O foco central do projeto é um jogo que envolve posicionar estrelas nas extremidades e
+                            calcular a distância entre elas.
                         </span>
                     </div>
-                    <button class="DefineTamanhoButtonProjects">
-                        Veja Mais
-                    </button>
+                    <a href="https://github.com/ViitorQuadros/Pygame"><button class="DefineTamanhoButtonProjects">
+                            Veja Mais
+                        </button></a>
                 </div>
             </div>
             <div class="LadoDireitoProjects">
@@ -113,17 +112,14 @@
                     </div>
                     <div class="SpanTeste">
                         <span>
-                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                            showcase
-                            my web presence, story, work experience, education, projects, and achievements in an
-                            interactive
-                            and
-                            visually-appealing format.
+                            Este projeto foi desenvolvido no tecnologo de Tecnologia da Informação, como
+                            parte de um projeto final de programação. Utilizando HTML, CSS e JavaScript, com o backend
+                            concentrado em PHP.
                         </span>
                     </div>
-                    <button class="DefineTamanhoButtonProjects">
-                        Veja Mais
-                    </button>
+                    <a href="https://github.com/ViitorQuadros/Pygame"><button class="DefineTamanhoButtonProjects">
+                            Veja Mais
+                        </button></a>
                 </div>
             </div>
         </div>
@@ -132,29 +128,28 @@
         <div class="mainProjects">
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
-                    <h1>Pygame</h1>
+                    <h1>AtituSound</h1>
                     <div class="DefineTamanhoBootStrapProjects">
                         <i class="bi bi-filetype-py"></i>
                         <i class="bi bi-github"></i>
                     </div>
                     <div class="SpanTeste">
                         <span>
-                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                            showcase
-                            my web presence, story, work experience, education, projects, and achievements in an
-                            interactive
-                            and
-                            visually-appealing format.
+                            Este projeto, desenvolvido em Java, tem como foco a adição de músicas às playlists do
+                            usuário. Construído utilizando o Java Maven e integrado com APIs para uma experiência mais
+                            completa.
                         </span>
                     </div>
-                    <button class="DefineTamanhoButtonProjects">
-                        Veja Mais
-                    </button>
+                    <a
+                        href="https://www.figma.com/proto/NruUDW26IUIlaskUShktYg/Projeto-Mobile---Iphone?type=design&node-id=28-958&t=jrw9UNUCP06WRCn8-1&scaling=scale-down&page-id=0%3A1&mode=design"><button
+                            class="DefineTamanhoButtonProjects">
+                            Veja Mais
+                        </button></a>
                 </div>
             </div>
             <div class="LadoDireitoProjects">
                 <div class="AjustaImagemProjects">
-                    <img src="assets/img/pygame.jpg" alt="">
+                    <img src="assets/img/Pulse.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -169,24 +164,21 @@
 
             <div class="LadoEsquerdoProjects">
                 <div class="DefineTamanhoEsquerdoProjects">
-                    <h1>LojaNike</h1>
+                    <h1>Login Page</h1>
                     <div class="DefineTamanhoBootStrapProjects">
                         <i class="bi bi-filetype-py"></i>
                         <i class="bi bi-github"></i>
                     </div>
                     <div class="SpanTeste">
                         <span>
-                            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                            showcase
-                            my web presence, story, work experience, education, projects, and achievements in an
-                            interactive
-                            and
-                            visually-appealing format.
+                            Este projeto, meticulosamente desenvolvido com HTML e CSS, visa proporcionar uma experiência
+                            de página de login envolvente, intuitiva e interativa, combinando elegância visual com
+                            funcionalidade aprimorada
                         </span>
                     </div>
-                    <button class="DefineTamanhoButtonProjects">
-                        Veja Mais
-                    </button>
+                    <a href="https://github.com/ViitorQuadros/Pygame"><button class="DefineTamanhoButtonProjects">
+                            Veja Mais
+                        </button></a>
                 </div>
             </div>
         </div>
@@ -225,7 +217,7 @@
                             inovação. Desde o início da minha formação, fiquei encantado com o vasto mundo da computação
                             e as infinitas possibilidades que ele oferece.</p>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
