Ajustes de ícones e imagens

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="mainProjects">
             <div class="LadoDireitoProjects">
                 <div class="AjustaImagemProjects">
-                    <img src="assets/img/LojaNike.jpg" alt="">
+                    <img src="assets/img/login.jpg" alt="">
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                             funcionalidade aprimorada
                         </span>
                     </div>
-                    <a href="https://github.com/ViitorQuadros/Pygame"><button class="DefineTamanhoButtonProjects">
+                    <a href="https://viitorquadros.github.io/LoginPage/"><button class="DefineTamanhoButtonProjects">
                             Veja Mais
                         </button></a>
                 </div>
@@ -222,35 +222,25 @@
             </div>
         </div>
 
-        <h1 style="color: aqua; background: #201b2c;  text-align: center; font-size: 30px; padding: 10px;">Linguagens
-        </h1>
+        <!--<h1 style="color: aqua; background: #201b2c;  text-align: center; font-size: 40px; padding: 10px;">Linguagens
+        </h1>-->
 
         <div class="MainIconsProjects">
             <div class="LarguraIconsProjects">
-                <div class="bordaIconsProjects">
-                    <h1>Linguagens</h1>
-                    <img src="assets/Icons/html-5.png" alt="">
-                    <img src="assets/Icons/css-3.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <!--<span>
-                        My favorite languages for systems programming, software engineering, and data analysis.
-                    </span>
-                -->
-                </div>
+                
                 <div class="bordaIconsProjects">
                     <h1>Back-end</h1>
                     <img src="assets/Icons/java.png" alt="">
                     <img src="assets/Icons/php.png" alt="">
                     <img src="assets/Icons/servidor-sql.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/python.png" alt=""> 
                     <!--<span>
                         My favorite languages for systems programming, software engineering, and data analysis.
                     </span>
                 -->
                 </div>
                 <div class="bordaIconsProjects">
-                    <h1>front-end</h1>
+                    <h1>Front-end</h1>
                     <img src="assets/Icons/html-5.png" alt="">
                     <img src="assets/Icons/css-3.png" alt="">
                     <img src="assets/Icons/bootstrap.png" alt="">
